# taskman

./: .gitignore  CMakeLists.txt  README.md
examples/: ArbritraryTask.h  CMakeLists.txt  TaskManagerCLI.cpp
include/: ITask.h  TaskMan.h
scripts/: build.sh  build_and_test.sh  configure.sh
source/: CMakeLists.txt  SayHi.cpp  TaskController.cpp  TaskController.h  TaskMan.cpp
source/tasks/: HelloTask.cpp  HelloTask.h  TaskFactory.cpp  TaskFactory.h  ThinkTask.cpp  ThinkTask.h
test/: CMakeLists.txt  MockFactory.h  MockTask.h  TaskControllerTest.cpp  TaskManTest.cpp
